<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".activities.SelectWayActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/fontGrayColor">

            <TextView
                android:id="@+id/toolbar_title"
                fontPath="fonts/IRANSans_Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mock_location"
                android:textColor="@android:color/black"
                android:textDirection="rtl"
                android:textSize="15dp"
                tools:ignore="MissingPrefix,SpUsage" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/message_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/orangeCardBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        fontPath="fonts/IRANSans.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/notice"
                        android:textColor="@color/orangeCardText"
                        android:textSize="@dimen/text16"
                        tools:ignore="MissingPrefix,SpUsage" />

                    <TextView
                        android:id="@+id/message_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textColor="@color/orangeCardText"
                        android:textSize="@dimen/text12"
                        tools:ignore="SpUsage" />

                    <LinearLayout
                        android:id="@+id/message_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height=".1dp"
                            android:background="@color/orangeCardText" />

                        <TextView
                            fontPath="fonts/IRANSans_Bold.ttf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/go_to_settings"
                            android:textColor="@color/orangeCardText"
                            android:textSize="@dimen/text13"
                            tools:ignore="MissingPrefix,SpUsage" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ir.elsadesign.fakegps.helpers.WrapContentListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/dividerColor"
                android:dividerHeight=".1dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="5dp"
        app:cardElevation="1dp">

        <TextView
            fontPath="fonts/IRANSans_Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="7.5dp"
            android:text="@string/stop_service"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            tools:ignore="MissingPrefix,SpUsage" />

    </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>