<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".activities.FixedPositionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/fontGrayColor">

            <TextView
                android:textDirection="rtl"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                fontPath="fonts/IRANSans_Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixed_position"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"
                tools:ignore="MissingPrefix,SpUsage" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <ImageView
        android:id="@+id/marker"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_mark" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/button_toggle_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/button_toggle_state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/label_button_start"
                android:textColor="@color/fontGrayColor"
                tools:ignore="MissingPrefix" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:clickable="true"
            android:contentDescription="@string/my_location"
            android:focusable="true"
            android:src="@drawable/ic_location"
            android:tooltipText="مکان من"
            app:backgroundTint="@android:color/white"
            app:elevation="6dp"
            app:useCompatPadding="true"
            tools:ignore="UnusedAttribute" />

        <TextView
            fontPath="fonts/IRANSans_Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginTop="14dp"
            android:elevation="16dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/my_location"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="9dp"
            tools:ignore="MissingPrefix,SpUsage,UnusedAttribute" />
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>